# IRCClient

./: CMakeLists.txt
include/: CMakeLists.txt  IRCClient.h
src/: CMakeLists.txt  IRCClient.cpp
